Remove border around task icon buttons in dashboard show. This fixes the problem where the task icons aren't fully displayed on tablet.

--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -18,3 +18,8 @@
 .task-icon-button {
   display: inline-block;
 }
+
+.task-icon-button button {
+  border: 0;
+}
+
